--- a/overview/css/index.css
+++ b/overview/css/index.css
@@ -2,6 +2,19 @@ body {
     font: 16px sans-serif;
 }
 
+.button {
+    background-color: green;
+    border: none;
+    border-radius: 8px;
+    color: white;
+    padding: 15px 32px;
+    font-size: 16px;
+}
+
+.button:hover {
+    background-color: orange;
+}
+
 .vis {
     text-align: center;
 }
