unieke identifiers gemaakt voor floor1.html voor het geval dat alles bij elkaar komt

--- a/overview/css/floor1.css
+++ b/overview/css/floor1.css
@@ -64,39 +64,39 @@ body {
     stroke: #cab2d6;
 }
 
-#zone1-text {
+#f1-zone1-text {
     color: #1f78b4;
 }
 
-#zone2-text {
+#f1-zone2-text {
     color: #b2df8a;
 }
 
-#zone3-text {
+#f1-zone3-text {
     color: #33a02c;
 }
 
-#zone4-text {
+#f1-zone4-text {
     color: #fb9a99;
 }
 
-#zone5-text {
+#f1-zone5-text {
     color: #e31a1c;
 }
 
-#zone6-text {
+#f1-zone6-text {
     color: #858585;
 }
 
-#zone7-text {
+#f1-zone7-text {
     color: #fdbf6f;
 }
 
-#zone8a-text {
+#f1-zone8a-text {
     color: #ff7f00;
 }
 
-#zone8b-text {
+#f1-zone8b-text {
     color: #cab2d6;
 }
 
