--- a/overview/css/general.css
+++ b/overview/css/general.css
@@ -23,7 +23,7 @@ body {
     text-align: center;
 }
 
-.line {
+.lines-general {
     fill: none;
     stroke: steelblue;
     stroke-width: 1.5px;
@@ -42,4 +42,10 @@ body {
 
 .y.axis text {
     font: 12px sans-serif;
+}
+
+.brush .extent {
+    stroke: #fff;
+    fill-opacity: .125;
+    shape-rendering: crispEdges;
 }
