--- a/overview/css/floor1.css
+++ b/overview/css/floor1.css
@@ -28,6 +28,11 @@ body {
     stroke-width: 1.5px;
 }
 
+.prox-lines {
+    fill: none;
+    stroke-width: 1.5px;
+}
+
 .f1-general {
     stroke: #a6cee3;
 }
@@ -119,4 +124,36 @@ body {
     stroke: #fff;
     fill-opacity: .125;
     shape-rendering: crispEdges;
+}
+
+.color1-text {
+    color: #1F77B4;
+}
+
+.color2-text {
+    color: #FF7F0E;
+}
+
+.color3-text {
+    color: #2CA02C;
+}
+
+.color4-text {
+    color: #D62728;
+}
+
+.color5-text {
+    color: #9467BD;
+}
+
+.color6-text {
+    color: #8C564B;
+}
+
+.color7-text {
+    color: #E377C2;
+}
+
+.color8-text {
+    color: #7F7F7F;
 }
