--- a/overview/css/floor3.css
+++ b/overview/css/floor3.css
@@ -28,6 +28,11 @@ body {
     stroke-width: 1.5px;
 }
 
+.prox-lines {
+    fill: none;
+    stroke-width: 1.5px;
+}
+
 .f3-general {
     stroke: steelblue;
 }
@@ -159,4 +164,32 @@ body {
     stroke: #fff;
     fill-opacity: .125;
     shape-rendering: crispEdges;
+}
+
+.color1-text {
+    color: #1F77B4;
+}
+
+.color2-text {
+    color: #FF7F0E;
+}
+
+.color3-text {
+    color: #2CA02C;
+}
+
+.color4-text {
+    color: #D62728;
+}
+
+.color5-text {
+    color: #9467BD;
+}
+
+.color6-text {
+    color: #8C564B;
+}
+
+.color7-text {
+    color: #E377C2;
 }
