--- a/overview/css/visualisations.css
+++ b/overview/css/visualisations.css
@@ -31,6 +31,30 @@ body {
     background-color: red;
 }
 
+.wrapper {
+    overflow: hidden;
+    width: 100%;
+    display: -webkit-flex;
+    display: flex;
+    /*justify-content: flex-start;*/
+    justify-content: space-between;
+}
+
+.wrapper-content {
+    display: inline-block;
+    float: left;
+}
+
+.wrapper-focus {
+    flex: 3;
+}
+
+.wrapper-minis {
+    -webkit-transform: scale(0.5);
+    transform: scale(0.5);
+    flex: 1 1 0;
+}
+
 .vis {
     text-align: center;
 }
