nu verschijnen de divs weer naast elkaar

--- a/overview/css/visualisations.css
+++ b/overview/css/visualisations.css
@@ -34,13 +34,9 @@ body {
 .wrapper {
     overflow: scroll;
     min-width: 1700px;
-    /*width: 100%;*/
     display: -webkit-flex;
     display: flex;
-    /*justify-content: flex-start;*/
     justify-content: space-between;
-    flex-direction: row;
-    flex-wrap: wrap;
 }
 
 .wrapper-content {
@@ -512,4 +508,34 @@ body {
 
 .color8-text {
     color: #7F7F7F;
+}
+
+.slider .handle {
+    fill: #fff;
+    stroke: #000;
+    stroke-opacity: .5;
+    stroke-width: 1.25px;
+    cursor: crosshair;
+}
+
+.slider-axis {
+    font: 10px sans-serif;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    user-select: none;
+}
+
+.slider-axis .domain {
+    fill: none;
+    stroke: #000;
+    stroke-opacity: .3;
+    stroke-width: 10px;
+    stroke-linecap: round;
+}
+
+.slider-axis .halo {
+    fill: none;
+    stroke: #ddd;
+    stroke-width: 8px;
+    stroke-linecap: round;
 }
