lege svgs ingeladen die ook on click inzoomen en nu blijven de posities van de minis bewaard dus dan raak je ze niet kwijt

--- a/overview/css/visualisations.css
+++ b/overview/css/visualisations.css
@@ -34,15 +34,19 @@ body {
 .wrapper {
     overflow: scroll;
     min-width: 1700px;
+    max-height: 900px;
     display: -webkit-flex;
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-start;
+
 }
 
 .wrapper-content {
     display: inline-block;
     float: left;
     text-align: center !important;
+    margin: auto 5px;
+    vertical-align: top;
 }
 
 .wrapper-focus {
