--- a/bootstrap/css/graphs.css
+++ b/bootstrap/css/graphs.css
@@ -1,7 +1,3 @@
-body {
-    font: 16px sans-serif;
-}
-
 .always-invisible {
     display: none;
 }
@@ -29,36 +25,6 @@ body {
 
 #button-graphs {
     background-color: red;
-}
-
-.wrapper {
-    overflow: scroll;
-    min-width: 1000px;
-    max-height: 900px;
-    display: -webkit-flex;
-    display: flex;
-    justify-content: flex-start;
-
-}
-
-.wrapper-content {
-    display: inline-block;
-    float: left;
-    text-align: center !important;
-    margin: auto 5px;
-    vertical-align: top;
-}
-
-.wrapper-focus {
-    flex: 3;
-}
-
-.wrapper-minis {
-    -webkit-transform: scale(0.4);
-    transform: scale(0.4);
-    flex: 1 1 0;
-    margin-right: 5%;
-    text-align: center;
 }
 
 .vis {
@@ -542,4 +508,8 @@ body {
     stroke: #ddd;
     stroke-width: 8px;
     stroke-linecap: round;
+}
+
+.foxy_hidden {
+    display: none;
 }
