--- a/bootstrap/assets/css/main.css
+++ b/bootstrap/assets/css/main.css
@@ -2595,3 +2595,8 @@
 	#graph_graph {
 		text-align: justify;
 	}
+
+    .floor-button,
+    .heatmap-button {
+        background-color: #779ECB;
+    }
