--- a/bootstrap/css/parallelCoordinates.css
+++ b/bootstrap/css/parallelCoordinates.css
@@ -8,7 +8,7 @@
 }
 
 .floor-button {
-    background-color: blue;
+    background-color: #779ECB;
     border: none;
     color: white;
     padding: 5px 20px;
