--- a/bootstrap/css/graphs.css
+++ b/bootstrap/css/graphs.css
@@ -12,7 +12,7 @@
 }
 
 .floor-button {
-    background-color: blue;
+    background-color: #779ECB;
     border: none;
     color: white;
     padding: 5px 20px;
@@ -24,7 +24,7 @@
 }
 
 #button-graphs {
-    background-color: red;
+    background-color: #C23B22;
 }
 
 .vis {
