--- a/bootstrap/css/heatmaps.css
+++ b/bootstrap/css/heatmaps.css
@@ -12,7 +12,7 @@
 }
 
 .heatmap-button {
-    background-color: blue;
+    background-color: #779ECB;
     border: none;
     color: white;
     padding: 5px 20px;
@@ -20,5 +20,5 @@
 }
 
 #button-heatmaps {
-    background-color: red;
+    background-color: #C23B22;
 }
