--- a/bootstrap/css/visualisations.css
+++ b/bootstrap/css/visualisations.css
@@ -16,7 +16,7 @@ body {
 }
 
 .floor-button {
-    background-color: blue;
+    background-color: #779ECB;
     border: none;
     color: white;
     padding: 5px 20px;
